--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "lite-server"
+    "dev": "lite-server",
+    "lint": "eslint .",
+    "fix": "eslint . --fix",
+    "check": "prettier --check .",
+    "write": "prettier --write ."
   },
   "repository": {
     "type": "git",
@@ -19,6 +23,11 @@
   },
   "homepage": "https://github.com/zetaleo/layouts#readme",
   "devDependencies": {
-    "lite-server": "^2.6.1"
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.24.1",
+    "lite-server": "^2.6.1",
+    "prettier": "^2.3.2"
   }
 }
